# finclip-rust-demo

./: LICENSE  README.md
ios/clip/: AppDelegate.h  AppDelegate.m  FinClipExt.h  FinClipExt.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/clip.xcodeproj/: project.pbxproj
ios/clip.xcodeproj/project.xcworkspace/xcuserdata/cliang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/clip/Base.lproj/: Main.storyboard
mini-app/: FinClipConf.js  app.ftss  app.js  app.json  fide.project.config.json  package-lock.json  package.json  sitemap.json
mini-app/pages/fetch/: fetch.ftss  fetch.fxml  fetch.js  fetch.json
mini-app/pages/generate/: generate.ftss  generate.fxml  generate.js
rust/: .gitignore  Cargo.toml
rust/examples/: test.rs
rust/scripts/: ios_build.sh
rust/src/: lib.rs
rust/src/wallet/: mod.rs  wallet_impl.rs
