[package]
name = "rust-crypto-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustywallet"
# this is needed to build for iOS and Android.
crate-type = ["staticlib", "lib"]

# this dependency is only needed for Android.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19.0", default-features = false }

[dependencies]
anyhow = "1.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-keccak = { version ="1.4"}
web3 = {version = "0.17.0"}
